--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.11.0",
+    "@types/node": "^22.5.5",
     "eslint": "^9.11.0",
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-react": "^7.36.1",
@@ -15,7 +16,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-lint-md": "^1.0.1",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.6.0"
+    "typescript-eslint": "^8.6.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0"
   },
   "scripts": {
     "prepare": "husky"
