--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -16,7 +16,8 @@
     "antd": "^5.20.6",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "seroval": "^1.1.1"
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.3",
