feat: 对接上传接口和进度条

--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@fingerprintjs/fingerprintjs": "^4.5.0",
     "@unocss/reset": "^0.62.4",
     "ahooks": "^3.8.1",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
+    "core": "workspace:*",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
