--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -12,18 +12,23 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@fingerprintjs/fingerprintjs": "^4.5.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@unocss/reset": "^0.62.4",
     "ahooks": "^3.8.1",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "core": "workspace:*",
     "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "seroval": "^1.1.1"
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
