--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
