feat: 添加恢复初始设置，对工作台概念改为用户，对编辑弹窗判断重复问题修改

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "check": "eslint . --ignore-pattern .gitignore .",
+    "typescript-check": "tsc --noEmit"
   }
 }
