--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -18,6 +18,7 @@
     "ahooks": "^3.8.1",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "core": "workspace:*",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
