--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -36,7 +36,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "less": "^4.2.0",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.2",
     "unocss": "^0.62.4",
     "vite": "^5.4.1"
   }
