feat: 上传文件部分逻辑重构，让其避免vite打包node的相关依赖

--- a/packages/core/src/config.json
+++ b/packages/core/src/config.json
@@ -1,4 +1,11 @@
 {
-  "baseURL": "https://playground.z.wiki",
-  "browserURL": "/api_core"
+  "browserConfiguration": {
+    "baseURL": "/api_core"
+  },
+  "nodeConfiguration": {
+    "baseURL": "https://playground.z.wiki",
+    "headers": {
+      "origin": "https://playground.z.wiki"
+    }
+  }
 }
