--- a/packages/interface-vite/package.json
+++ b/packages/interface-vite/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "build-electron": "vite build --mode electron",
+    "check": "tsc -b",
     "lint": "eslint .",
     "preview": "vite preview"
   },
