ci: ci每次提交多一次消息处理

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -33,5 +33,5 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add CHANGELOG.md
           git commit -m "Update changelog" || exit 0
-          git pull --rebase origin master  # 拉取远程更新并rebase
+          git pull --rebase --autostash
           git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git master
