feat: 添加typora的使用

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "references": [
     { "path": "./packages/interface-vite" },
     { "path": "./packages/core" },
-    { "path": "./packages/interface-electron" }
+    { "path": "./packages/interface-electron" },
+    {
+      "path": "./packages/typora"
+    }
   ],
   "files": []
 }
