--- a/packages/interface-web/package.json
+++ b/packages/interface-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interface-vite",
+  "name": "interface-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,33 +13,38 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@fingerprintjs/fingerprintjs": "^4.5.0",
     "@iconify-json/vscode-icons": "^1.2.2",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-router": "^1.112.0",
     "@unocss/reset": "^0.62.4",
     "ahooks": "^3.8.1",
-    "antd": "^5.20.6",
+    "antd": "^5.24.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "core": "workspace:*",
     "dayjs": "^1.11.13",
+    "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "seroval": "^1.1.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@iconify-json/catppuccin": "^1.2.3",
     "@iconify-json/mdi": "^1.2.0",
+    "@tanstack/router-devtools": "^1.112.0",
+    "@tanstack/router-plugin": "^1.112.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
+    "eslint-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
     "less": "^4.2.0",
     "typescript": "^5.6.2",
     "unocss": "^0.62.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
