--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,8 @@
     "formdata-node": "^6.0.3"
   },
   "exports": {
-    ".": "./src/main.ts",
-    "./*": "./src/*"
+    "./upload-browser": "./src/utils/upload-browser.ts",
+    "./api/*": "./src/api/*",
+    "./config.json": "./src/config.json"
   }
 }
