--- a/packages/interface-web/package.json
+++ b/packages/interface-web/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.24.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "copy-text-to-clipboard": "^3.2.0",
     "core": "workspace:*",
     "dayjs": "^1.11.13",
     "immer": "^10.1.1",
