fix: 修复core exports. 拼写错误

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
     "axios": ">=1.0.0"
   },
   "exports": {
-    ".": "./SRC/main.ts",
+    ".": "./src/main.ts",
     "./upload-browser": "./src/utils/upload-browser.ts",
     "./api/*": "./src/api/*",
     "./config.json": "./src/config.json"
