fix: 修复cors请求头错误

--- a/packages/core/src/config.json
+++ b/packages/core/src/config.json
@@ -1,5 +1,5 @@
 {
-  "browserConfiguration": {
+  "browserProxy": {
     "baseURL": "/api_core"
   },
   "nodeConfiguration": {
@@ -7,5 +7,8 @@
     "headers": {
       "origin": "https://playground.z.wiki"
     }
+  },
+  "browserConfiguration": {
+    "baseURL": "https://playground.z.wiki"
   }
 }
