--- a/packages/interface-electron/package.json
+++ b/packages/interface-electron/package.json
@@ -3,12 +3,47 @@
   "version": "1.0.0",
   "main": "src/entry.js",
   "license": "MIT",
+  "description": "敖武的图床应用",
+  "author": "杨柳 <yangboses@gmail.com>",
   "scripts": {
-    "start": "electron ."
+    "start": "cross-env NODE_ENV=development electron .",
+    "build": "electron-builder"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.5",
+    "cross-env": "^7.0.3",
+    "electron": "^32.1.2",
+    "electron-builder": "^25.1.8",
+    "esbuild": "^0.25.0"
   },
   "dependencies": {
-    "electron": "^32.1.2",
-    "esbuild-register": "^3.6.0",
-    "tsx": "^4.19.1"
+    "esbuild-register": "^3.6.0"
+  },
+  "build": {
+    "appId": "bosens-china.github.io",
+    "productName": "picture-bed",
+    "files": [
+      "src/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "dist_electron"
+    },
+    "linux": {
+      "target": "AppImage"
+    },
+    "asar": true,
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "zip"
+      ]
+    }
   }
 }
