fix: 修复ci拼写错误

--- a/.github/workflows/release-electron.yml
+++ b/.github/workflows/release-electron.yml
@@ -22,8 +22,11 @@ jobs:
           node-version: 20
           cache: pnpm
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Build Electron App
-        run: pnpm -F interface-web run build
+        run: pnpm -F interface-electron run build
         env:
           NODE_ENV: production
 
