ci: 额外添加触发事件

--- a/.github/workflows/release-electron.yml
+++ b/.github/workflows/release-electron.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+    branches: [master]
+    paths:
+      - '.github/workflows/release-electron.yml'
+
 jobs:
   release:
     runs-on: ubuntu-latest
