--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm # 或 pnpm / yarn
 
       - name: Install dependencies
         run: pnpm install
