--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: 20
           cache: pnpm # 或 pnpm / yarn
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
 
       - name: Install dependencies
         run: pnpm install
