feat: 增加编译后文件，防止兼容性问题

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "../../tsconfig.node.json",
-  "include": ["./src"]
+  "include": ["./src"],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "declaration": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true
+  }
 }
