--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,11 +19,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: 'https://registry.npmjs.org'
+          cache: pnpm # 或 pnpm / yarn
+
+      - name: Install dependencies
+        run: pnpm install # 或 pnpm install / yarn install / bun install
+
+      - name: Build
+        working-directory: ./packages/core
+        run: pnpm run build
 
       - name: Publish
         working-directory: ./packages/core
