--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boses/picture-bed-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "图床上传sdk",
   "license": "MIT",
   "type": "module",
@@ -8,7 +8,8 @@
   "devDependencies": {
     "axios": "^1.7.7",
     "esbuild": "^0.25.0",
-    "tsx": "^4.19.1"
+    "esbuild-plugin-d.ts": "^1.3.1",
+    "tsx": "^4.19.3"
   },
   "homepage": "https://github.com/bosens-China/picture-bed",
   "bugs": {
@@ -18,8 +19,12 @@
     "axios": ">=1.0.0"
   },
   "files": [
-    "src"
+    "dist"
   ],
-  "main": "./src/main.ts",
-  "module": "./src/main.ts"
+  "main": "./dist/main.cjs",
+  "module": "./dist/main.mjs",
+  "types": "./dist/main.d.ts",
+  "scripts": {
+    "build": "tsx build.ts"
+  }
 }
