--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
+
       - uses: pnpm/action-setup@v3
         with:
           version: 9
-      # - uses: oven-sh/setup-bun@v1 # 如果使用 Bun，请取消注释
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -43,10 +44,16 @@ jobs:
           cache: pnpm # 或 pnpm / yarn
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Install dependencies
-        run: pnpm install # 或 pnpm install / yarn install / bun install
+        run: pnpm install
+
+      - name: Build Core
+        run: pnpm -F @boses/picture-bed-sdk run build
+
       - name: Build with interface-web
         run: pnpm -F interface-web run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
