--- a/packages/interface-web/package.json
+++ b/packages/interface-web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@boses/picture-bed-sdk": "workspace:*",
     "@fingerprintjs/fingerprintjs": "^4.5.0",
     "@iconify-json/vscode-icons": "^1.2.2",
     "@tanstack/react-router": "^1.112.0",
@@ -23,12 +24,11 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "copy-text-to-clipboard": "^3.2.0",
-    "@boses/picture-bed-sdk": "workspace:*",
     "dayjs": "^1.11.13",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -41,11 +41,12 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
+    "code-inspector-plugin": "^0.20.7",
     "eslint-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
     "less": "^4.2.0",
     "typescript": "^5.6.2",
     "unocss": "^0.62.4",
-    "vite": "^5.4.1",
+    "vite": "^6.2.3",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
