--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
-  # all packages in direct subdirs of packages/
-  - 'packages/*'
-  # all packages in subdirs of components/
-  - 'components/**'
-  # exclude packages that are inside test directories
+  - packages/*
+  - components/**
   - '!**/test/**'
+onlyBuiltDependencies:
+  - electron
+  - esbuild
